Implemented PriorityQueue